# Lobic

./: .gitignore  ;  Cargo.toml  TODO.md  diesel.toml  index.html  package-lock.json  package.json  save-music.js  tailwind.config.js  tsconfig.json  vite.config.js
migrations/2024-11-24-163211_users/: up.sql
migrations/2024-12-08-193352_create_music_table/: down.sql  up.sql
migrations/2025-01-05-163758_create_tables/: up.sql
src/: App.jsx  App.tsx  AppState.jsx  app_state.rs  conf.jsx  config.rs  const.jsx  const.ts  index.css  lobby.rs  main.jsx  main.rs  main.tsx  schema.rs  types.d.ts  user_pool.rs
src/api/: friendApi.ts  likedSongsApi.js  likedSongsApi.ts  lobbyApi.ts  musicApi.js  musicApi.ts  musicSearchApi.js  musicSearchApi.ts  playlistApi.js  playlistApi.ts  searchApi.ts  socketApi.ts  topTracksApi.ts  userApi.js  userApi.ts
src/api/music/: browseCategoryApi.ts  likedSongsApi.ts  musicApi.ts  musicSearchApi.ts  recentlyPlayedApi.ts  save-music.js  topTracksApi.ts  trendingApi.ts
src/api/playlist/: combinedPlaylistApi.ts  (+1 more)
src/auth/: exp.rs  jwt.rs  mod.rs
src/commons/: style.css
src/components/: NotFound.tsx  UploadModal.tsx
src/lobic_db/: db.rs  models.rs
src/pages/: Signup.jsx
src/providers/: AppProvider.tsx  LobbyProvider.tsx  MusicListContextProvider.tsx  MusicProvider.tsx  NotificationProvider.tsx  Providers.tsx  QueueProvider.tsx  SocketProvider.tsx
src/routes/: AppRoutes.tsx  AuthRoutes.tsx  get_music.rs  get_user.rs  login.rs  mod.rs  playlist.rs  save_music.rs  search.rs  signup.rs  socket.rs  verify.rs
src/utils/: cookie.rs
(+112 files in other folders)
