[package]
name = "Lobic"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.9", features = ["ws"] }
diesel = { version = "2.2.5", features = ["sqlite", "r2d2"] }
dotenv = "0.15.0"
tokio = { version = "1.41.1", features = ["full"] }
tower-http = { version = "0.6.2", features = ["trace"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
